--- a/DwarfCorp/LibNoise/GNUmakefile
+++ b/DwarfCorp/LibNoise/GNUmakefile
@@ -1,7 +1,7 @@
 MCS?=		mcs
-OBJDIR:=	../../obj.mono
+BUILDDIR:=	../../build.mono
 
-TARGET=		$(OBJDIR)/LibNoise.dll
+TARGET=		$(BUILDDIR)/LibNoise.dll
 
 CSFLAGS+=	-debug
 #CSFLAGS+=	-define:"TRACE;DEBUG"
@@ -12,13 +12,13 @@ SYSREFS=	System.dll \
 		System.Xml.dll
 LIBREFS=	
 
-LIBDIR=		$(OBJDIR)
+LIBDIR=		$(BUILDDIR)
 CSFLAGS+=	$(addprefix -r:,$(SYSREFS) $(addprefix $(LIBDIR)/,$(LIBREFS)))
 
 
 all: $(TARGET)
 
-$(TARGET): $(OBJDIR)
+$(TARGET):
 	$(MCS) $(CSFLAGS) -recurse:'*.cs' -target:library -out:$@
 
 clean:
