Make assemblies depend on cs sources

--- a/DwarfCorp/DwarfCorpXNA/GNUmakefile
+++ b/DwarfCorp/DwarfCorpXNA/GNUmakefile
@@ -26,7 +26,7 @@ CSFLAGS+=	$(addprefix -r:,$(SYSREFS) $(addprefix $(LIBDIR)/,$(LIBREFS)))
 
 all: $(TARGET)
 
-$(TARGET):
+$(TARGET): $(shell find . -name '*.cs') GNUmakefile
 	$(MCS) $(CSFLAGS) -recurse:'*.cs' -target:exe -out:$@
 
 clean:
