--- a/DwarfCorp/LibNoise/GNUmakefile
+++ b/DwarfCorp/LibNoise/GNUmakefile
@@ -18,7 +18,7 @@ CSFLAGS+=	$(addprefix -r:,$(SYSREFS) $(addprefix $(LIBDIR)/,$(LIBREFS)))
 
 all: $(TARGET)
 
-$(TARGET):
+$(TARGET): $(shell find . -name '*.cs') GNUmakefile
 	$(MCS) $(CSFLAGS) -recurse:'*.cs' -target:library -out:$@
 
 clean:
